[gd_scene load_steps=2 format=2]

[ext_resource path="res://Select_level.gd" type="Script" id=1]

[node name="Select_level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -34.0
margin_right = 150.0
margin_bottom = 34.0

[node name="level01" type="Button" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 20.0
text = "Level 01"

[node name="level02" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 44.0
text = "Level 02"

[node name="level03" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 300.0
margin_bottom = 68.0
text = "Level 03"

[connection signal="pressed" from="VBoxContainer/level01" to="." method="_on_level01_pressed"]
[connection signal="pressed" from="VBoxContainer/level02" to="." method="_on_level02_pressed"]
[connection signal="pressed" from="VBoxContainer/level03" to="." method="_on_level03_pressed"]
